Added pdf view and download for all authorizations

--- a/Licenta2018WebApplication/src/main/resources/templates/requests/form.html
+++ b/Licenta2018WebApplication/src/main/resources/templates/requests/form.html
@@ -43,18 +43,20 @@
 							<label>Obiect activitate</label>
 							<p><textarea  rows="1" class="form-control" placeholder="Introduceti obiectul de activitate" th:field="*{categorieConstructie}" ></textarea></p>								
 							<label>Adresa societatii comerciale</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti adresa societatii comerciale" th:field="*{adresaConstructie}" ></textarea></p>														</div>
+							<p><textarea  rows="1" class="form-control" placeholder="Introduceti adresa societatii comerciale" th:field="*{adresaConstructie}" ></textarea></p>														
+							<label>Suprafata terenului</label>
+							<p><textarea  rows="1" class="form-control" placeholder="Introduceti suprafata terenului" th:field="*{suprafataTeren}" ></textarea></p>								
+							
+						</div>
 						<div id="functionare" style="display: none;">
 							<label>Denumirea firmei</label>
 							<p><textarea  rows="1" class="form-control" placeholder="Introduceti denumirea firmei" th:field="*{numeSolicitant}" ></textarea></p>	
 							<label>Obiect activitate</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti categoria constructiei" th:field="*{categorieConstructie}" ></textarea></p>								
-							<label>Suprafata terenului</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti suprafata terenului" th:field="*{suprafataTeren}" ></textarea></p>								
-							<label>Adresa terenului</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti adresa constructiei" th:field="*{adresaConstructie}" ></textarea></p>								
-							<label>Asigurarea utilitatilor</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti numele proiectantului" th:field="*{utilitati}" ></textarea></p>								
+							<p><textarea  rows="1" class="form-control" placeholder="Introduceti obiectul de activitate" th:field="*{categorieConstructie}" ></textarea></p>								
+							<label>Cod CAEN</label>
+							<p><textarea  rows="1" class="form-control" placeholder="Introduceti codul CAEN al companiei" th:field="*{codCaen}" ></textarea></p>																						
+							<label>Adresa spatiului</label>
+							<p><textarea  rows="1" class="form-control" placeholder="Introduceti adresa spatiului" th:field="*{adresaConstructie}" ></textarea></p>								
 							<label>Autorizatie de securitate la incendiu</label>
 							<p><textarea  rows="1" class="form-control" placeholder="Introduceti numarul autorizatiei" th:field="*{nrAutorizatie}" ></textarea></p>															
 						</div>
