--- a/Licenta2018WebApplication/src/main/resources/templates/users/show.html
+++ b/Licenta2018WebApplication/src/main/resources/templates/users/show.html
@@ -26,7 +26,7 @@
 				<span th:if="${user.authority.role} == 'ROLE_SECRETARY'">Secretariat</span>
 				<span th:if="${user.authority.role} == 'ROLE_CONSTRUCTION_AUTHORIZE'">Departament constructii</span>
 				<span th:if="${user.authority.role} == 'ROLE_ENVIRONMENT_AUTHORIZE'">Departament mediu</span>
-				<span th:if="${user.authority.role} == 'ROLE_INFRASTRUCTURE'">Departament deschidere spatiu</span>
+				<span th:if="${user.authority.role} == 'ROLE_INFRASTRUCTURE'">Directia Economica</span>
 			</h4>
 		</div>
 
@@ -73,7 +73,7 @@
 					</div>
 					<div class="tab-pane" id="tab_default_2">						
 						<h4><i class="glyphicon glyphicon-th-list"></i> Approved audiences</h4>
-						<div th:if="${!#lists.isEmpty(bookings)}">
+						<div th:if="${!#lists.isEmpty(audiences)}">
 							<table class="table">
 								<thead>
 									<tr>
@@ -85,33 +85,14 @@
 										<th></th>
 									</tr>
 								</thead>
-								<tr th:if="${booking.state}" th:each="booking : ${bookings}">
-									<td><span th:text="${#dates.day(booking.begin_date)}"></span>
-										<span th:text="${#dates.monthName(booking.begin_date)}"></span>
-										<span th:text="${#dates.year(booking.begin_date)}"></span></td>
-									<td><span th:text="${#dates.day(booking.end_date)}"></span>
-										<span th:text="${#dates.monthName(booking.end_date)}"></span>
-										<span th:text="${#dates.year(booking.end_date)}"></span></td>
-									 <td>
-										 <a th:text="${booking.hotel.name}"
-											th:href="@{|/hotels/${booking.hotel.id}|}"></a>
-									</td>
-									<td><span th:text="${booking.roomType}"></span></td>
-									<td>
-										<div th:each="r : ${booking.rooms}">
-											<span th:text="${r.room_number}"></span><br>
-										</div>
-									</td>
-									<td><a th:href="@{|/bookings/${booking.id}/remove|}"><i class="glyphicon glyphicon-trash"></i></a></td>
-								</tr>
 							</table>
 						</div>										
-						<p th:if="${#lists.isEmpty(bookings)}">
+						<p th:if="${#lists.isEmpty(audiences)}">
 							<i>No audiences</i>
 						</p>
 						
 						<h4><i class="glyphicon glyphicon-th-list"></i> Pending audiences</h4>
-						<div th:if="${!#lists.isEmpty(bookings)}">
+						<div th:if="${!#lists.isEmpty(audiences)}">
 							<table class="table">
 								<thead>
 									<tr>
@@ -123,30 +104,9 @@
 										<th></th>
 									</tr>
 								</thead>
-								<tr th:if="${!booking.state}" th:each="booking : ${bookings}">
-									<td><span th:text="${#dates.day(booking.begin_date)}"></span>
-										<span th:text="${#dates.monthName(booking.begin_date)}"></span>
-										<span th:text="${#dates.year(booking.begin_date)}"></span></td>
-									<td><span th:text="${#dates.day(booking.end_date)}"></span>
-										<span th:text="${#dates.monthName(booking.end_date)}"></span>
-										<span th:text="${#dates.year(booking.end_date)}"></span></td>
-									<td>
-										 <a th:text="${booking.hotel.name}"
-											th:href="@{|/hotels/${booking.hotel.id}|}"></a>
-									</td>
-									<td><span th:text="${booking.roomType}"></span></td>
-									<td>
-										<div th:each="r : ${booking.rooms}">
-											<span th:text="${r.room_number}"></span><br>
-										</div>
-									</td>
-									<td>
-										<a th:href="@{|/requests/${request.id}/remove|}"><i class="glyphicon glyphicon-trash"></i></a>										
-									</td>
-								</tr>
 							</table>
 						</div>						
-						<p th:if="${#lists.isEmpty(bookings)}">
+						<p th:if="${#lists.isEmpty(audiences)}">
 							<i>No audiences</i>
 						</p>
 					</div>
