--- a/Licenta2018WebApplication/src/main/resources/templates/users/show.html
+++ b/Licenta2018WebApplication/src/main/resources/templates/users/show.html
@@ -42,6 +42,18 @@
 						<div class="col-md-6">
 							<h4><i class="glyphicon glyphicon-home"></i> Approved requests</h4>
 							<div th:if="${!#sets.isEmpty(requests)}">
+								<table class="table">
+									<thead>
+										<tr>
+											<th>Numar cerere</th>
+											<th>Check-out</th>
+											<th>Hotel</th>
+											<th>Room Type</th>
+											<th>Room Number</th>
+											<th></th>
+										</tr>
+									</thead>
+								</table>
 								<div th:if="${req.approvalStatus}" th:each="req : ${requests}">
 									<a th:text="${req.id}" th:href="@{|/requests/${req.id}|}"></a>
 									<span th:text="${req.approvalStatus}"></span>
