--- a/Licenta2018WebApplication/src/main/resources/templates/audiences/create.html
+++ b/Licenta2018WebApplication/src/main/resources/templates/audiences/create.html
@@ -15,7 +15,7 @@
 	<div th:include="fragments/header"></div>
 	<div class="container">
 		<div class="page-header">
-			<h1>Create a audience</h1>
+			<h1>Solicita o audienta</h1>
 		</div>
 		<div th:include="audiences/form :: audiencesform(@{/audiences/})"></div>
 		<p>
