--- a/Licenta2018WebApplication/src/main/resources/templates/index.html
+++ b/Licenta2018WebApplication/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
 <link
 	href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.1/css/bootstrap.min.css"
 	rel="stylesheet" media="screen" />
+	<link rel="stylesheet" type="text/css" th:href="@{|/css/general.css|}" />
 </head>
 <body>
 	<div th:include="fragments/header"></div>
