--- a/Licenta2018WebApplication/src/main/resources/templates/users/create.html
+++ b/Licenta2018WebApplication/src/main/resources/templates/users/create.html
@@ -3,7 +3,8 @@
 <head> 
     <title>Create new User</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen"/>    
+    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
+    <link rel="stylesheet" type="text/css" th:href="@{|/css/general.css|}" /> 
 </head>
 <body>
 	<div th:include="fragments/header"></div>
