--- a/Licenta2018WebApplication/src/main/resources/templates/requests/form.html
+++ b/Licenta2018WebApplication/src/main/resources/templates/requests/form.html
@@ -24,42 +24,42 @@
 						</select>
 						<div id="constructii">
 							<label>Denumire firma</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti nume solicitant" th:field="*{numeSolicitant}" ></textarea></p>	
+							<p><input type="text" class="form-control" placeholder="Introduceti denumirea firmei" th:field="*{numeSolicitant}" ></input></p>	
 							<label>Categorie constructie</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti categoria constructiei" th:field="*{categorieConstructie}" ></textarea></p>								
+							<p><input type="text" class="form-control" placeholder="Introduceti categoria constructiei" th:field="*{categorieConstructie}" ></input></p>								
 							<label>Suprafata terenului</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti suprafata terenului" th:field="*{suprafataTeren}" ></textarea></p>								
+							<p><input type="text" class="form-control" placeholder="Introduceti suprafata terenului" th:field="*{suprafataTeren}" ></input></p>								
 							<label>Adresa constructiei</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti adresa constructiei" th:field="*{adresaConstructie}" ></textarea></p>								
+							<p><input type="text" class="form-control" placeholder="Introduceti adresa constructiei" th:field="*{adresaConstructie}" ></input></p>								
 							<label>Denumire firma proiectanta</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti numele proiectantului" th:field="*{numeProiectant}" ></textarea></p>								
+							<p><input type="text" class="form-control" placeholder="Introduceti numele proiectantului" th:field="*{numeProiectant}" ></input></p>								
 							<label>Valoarea lucrarilor</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti valoarea lucrarilor" th:field="*{valoareLucrari}" ></textarea></p>															
+							<p><input type="text" class="form-control" placeholder="Introduceti valoarea lucrarilor" th:field="*{valoareLucrari}" ></input></p>															
 						</div>
 						<div id="mediu" style="display: none;">
 							<label>Denumire firma</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti nume solicitant" th:field="*{numeSolicitant}" ></textarea></p>	
+							<p><input type="text" class="form-control" placeholder="Introduceti denumirea firmei" th:field="*{numeSolicitant}" ></input></p>	
 							<label>Cod CAEN</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti codul CAEN al companiei" th:field="*{codCaen}" ></textarea></p>															
+							<p><input type="text" class="form-control" placeholder="Introduceti codul CAEN al companiei" th:field="*{codCaen}" ></input></p>															
 							<label>Obiect activitate</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti obiectul de activitate" th:field="*{categorieConstructie}" ></textarea></p>								
+							<p><input type="text" class="form-control" placeholder="Introduceti obiectul de activitate" th:field="*{categorieConstructie}" ></input></p>								
 							<label>Adresa societatii comerciale</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti adresa societatii comerciale" th:field="*{adresaConstructie}" ></textarea></p>														
+							<p><input type="text" class="form-control" placeholder="Introduceti adresa societatii comerciale" th:field="*{adresaConstructie}" ></input></p>														
 							<label>Suprafata terenului</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti suprafata terenului" th:field="*{suprafataTeren}" ></textarea></p>								
+							<p><input type="text" class="form-control" placeholder="Introduceti suprafata terenului" th:field="*{suprafataTeren}" ></input></p>								
 							
 						</div>
 						<div id="functionare" style="display: none;">
 							<label>Denumirea firmei</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti denumirea firmei" th:field="*{numeSolicitant}" ></textarea></p>	
+							<p><input type="text" class="form-control" placeholder="Introduceti denumirea firmei" th:field="*{numeSolicitant}" ></input></p>	
 							<label>Obiect activitate</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti obiectul de activitate" th:field="*{categorieConstructie}" ></textarea></p>								
+							<p><input type="text" class="form-control" placeholder="Introduceti obiectul de activitate" th:field="*{categorieConstructie}" ></input></p>								
 							<label>Cod CAEN</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti codul CAEN al companiei" th:field="*{codCaen}" ></textarea></p>																						
+							<p><input type="text" class="form-control" placeholder="Introduceti codul CAEN al companiei" th:field="*{codCaen}" ></input></p>																						
 							<label>Adresa spatiului</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti adresa spatiului" th:field="*{adresaConstructie}" ></textarea></p>								
+							<p><input type="text" class="form-control" placeholder="Introduceti adresa spatiului" th:field="*{adresaConstructie}" ></input></p>								
 							<label>Autorizatie de securitate la incendiu</label>
-							<p><textarea  rows="1" class="form-control" placeholder="Introduceti numarul autorizatiei" th:field="*{nrAutorizatie}" ></textarea></p>															
+							<p><input type="text" class="form-control" placeholder="Introduceti numarul autorizatiei" th:field="*{nrAutorizatie}" ></input></p>															
 						</div>
 						<script>
 							function check(idCerere)
